--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="es">
 
 <head>
   <meta charset="utf-8">
@@ -36,7 +36,7 @@
   <section>
     <div class="container-sm">
       <img src="img/ba1.jpg" class="card-img-top" alt="foto Edificio">
-
+      
     </div>
   </section>
 
@@ -94,12 +94,12 @@
   </section>
 
   <section>
-    <div class="container-sm">
+    <div class="container-md">
       <div class="row">
-        <div class="imagen1 col-md-6">
+        <div class="imagen1 col-md-6 col-lg-6">
           <img src="img/honolulu.jpg" style="width:800px;" alt="foto playa">
         </div>
-        <div class="texto1 col-md-6" style="background-color: grey;">
+        <div class="texto1 col-md-6 col-lg-6" style="background-color: grey;">
           <p>
           <h1 class="Titulo" style="font-size: large;">Bs As - Octubre</h1>
           Buenos aires es la provincia y localidad mas grande del estado de argentina,en los Ustados Unidos.
